@@ -71,6 +71,20 @@ def CloneTrove(cfg, targetBranch, troveSpecList, updateBuildInfo = True,
         print 'The following clones will be created:'
         displayCloneJob(cs)
 
+    labelConflicts = client._checkChangeSetForLabelConflicts(cs)
+    if labelConflicts:
+        print
+        print 'WARNING: performing this clone will create label conflicts:'
+        for troveTups in labelConflicts:
+            print
+            print '%s=%s[%s]' % (troveTups[0])
+            print '  conflicts with %s=%s[%s]' % (troveTups[1])
+
+        if not cfg.interactive and not info:
+            print
+            print 'error: interactive mode is required for when creating label conflicts'
+            return
+
     if info:
         return
 
